k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: memo-app
  labels:
    name: memo-app
    environment: production
