k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memo-app
  namespace: memo-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: memo-app.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: memo-app-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memo-app-frontend
                port:
                  number: 80
